# code-review-openenv

./: .gitignore  Dockerfile  README.md  UPGRADE_SUMMARY.md  evaluate.py  inference.py  openenv.yaml  pyproject.toml  pyrightconfig.json  requirements.txt  run.py  test_api.py  test_api_advanced.py  test_fix.py
agent/: __init__.py  baseline_agent.py
env/: __init__.py  code_review_env.py  grader.py  tasks.py
server/: __init__.py  app.py
