[project]
name = "code-review-openenv"
version = "0.1.0"
description = "OpenEnv Code Review Environment for AI debugging tasks"
authors = [
    { name = "Jevesh", email = "iamjevesh@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "openenv>=0.1.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["env", "agent", "server"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
